--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<title>Flumgus Restaurant - Snail Café Supreme</title>
+<title>Flumgus Café </title>
 <style>
   body, html {
     margin: 0; 
