--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       <div id="cooking-queue"></div>
     </div>
     
-    <div id="chef-snail">🐌👨‍🍳</div>
+    <div id="chef-snail">🐌</div>
     
     <div id="kitchen-counter">
       <div class="ingredient" data-ingredient="lettuce">🥬<br>Lettuce<br>2s</div>
